сортировка биатлонистов в таблице по очкам + fix overflow футера

--- a/front/styles/index.css
+++ b/front/styles/index.css
@@ -87,7 +87,8 @@ table{
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
-    width:700px;
+    width:80%;
+
 }
 td{
     border: 1px solid #dddddd;
@@ -102,7 +103,7 @@ th{
 }
 
 footer {
-    position:absolute;
+    position:relative;
     bottom: 0;
     display: flex;
     align-items: center;
